--- a/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
+++ b/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
@@ -8,6 +8,7 @@
         <description>Allows version numbers to be overridden from the build based on $SemanticVersion and the optional $Tag build variables. By Default it will modify AssemblyInfo but you can change this to another filename with $VersionFileName if you have a custom info file.</description>
         <language>en-US</language>
         <projectUrl>https://github.com/Lexcess</projectUrl>
+        <iconUrl>https://github.com/Lexcess/SemanticVersioning.Build/blob/master/src/MSBuild/icon.png?raw=true</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
     </metadata>
 </package>
