--- a/src/MSBuild/SemanticVersioning.MSBuild.csproj
+++ b/src/MSBuild/SemanticVersioning.MSBuild.csproj
@@ -45,6 +45,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="build\SemanticVersioning.MSBuild.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
