--- a/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
+++ b/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
@@ -13,10 +13,19 @@
         <iconUrl>https://github.com/Lexcess/SemanticVersioning.Build/blob/master/src/MSBuild/icon.png?raw=true</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <dependencies>
-        <group targetFramework="dotnet">
+          <group targetFramework="dotnet">
             <dependency id="System.IO" version="4.0.10"/>
-            <dependency id="System.Runtime" version="4.0.20"/>
+            <dependency id="System.Runtime" version="4.0.0"/>
           </group>
+          <group targetFramework="netcore45"/>
+          <group targetFramework="netcore50">
+            <dependency id="System.IO" version="4.0.10"/>
+            <dependency id="System.Runtime" version="4.0.0"/>
+          </group>
+          <group targetFramework="net45"/>
+          <group targetFramework="wp8"/>
+          <group targetFramework="wpa81"/>
+          <group targetFramework="portable-netcore45+net45+wp8+wpa8"/>
         </dependencies>    
     </metadata>
 
