--- a/src/MSBuild/SemanticVersioning.MSBuild.csproj
+++ b/src/MSBuild/SemanticVersioning.MSBuild.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="icon.png" />
+    <None Include="icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="build\SemanticVersioning.MSBuild.targets" />
