--- a/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
+++ b/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
@@ -5,13 +5,14 @@
     <version>$version$</version>
     <authors>Lex Mitchell</authors>
     <owners>Lex Mitchell</owners>
-    <title>Version injection of DLL's based on the model described by SemVer.org methods</title>
-    <description>Allows version numbers to be overridden from the build based on $SemanticVersion and the optional $Tag build variables. By Default it will modify AssemblyInfo but you can change this to another filename with $VersionFileName if you have a custom info file.</description>
+    <title>Version injection of DLL's based on the model described by SemVer.org methods. No dependencies on PowerShell or MSBuild Community Tasks</title>
+    <description>Allows version numbers (including file and informational) to be overridden from the build based on $SemanticVersion and the optional $Tag build variables. By Default it will look for AssemblyInfo but you can change this to another filename (omitting extension) with $VersionFileName if you have a custom info file. Typically you would leave local builds at version 1.0.0.0 and inject the parameters on a build server.</description>
     <language>en-US</language>
     <copyright>Copyright © 2016.</copyright>
     <projectUrl>https://github.com/Lexcess</projectUrl>
-    <iconUrl>https://github.com/Lexcess/SemanticVersioning.Build/blob/master/src/MSBuild/icon.png?raw=true</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/Lexcess/SemanticVersioning.MSBuild/master/src/MSBuild/icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <developmentDependency>true</developmentDependency>
+    <tags>msbuild semver semantic versioning csproj assemblyinfo assemblyversion assemblyinformationalversion</tags>
   </metadata>
 </package>
