--- a/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
+++ b/src/MSBuild/SemanticVersioning.MSBuild.Nuspec
@@ -6,7 +6,8 @@
     <authors>Lex Mitchell</authors>
     <owners>Lex Mitchell</owners>
     <title>Version injection of DLL's based on the model described by SemVer.org methods. No dependencies on PowerShell or MSBuild Community Tasks</title>
-    <description>Allows version numbers (including file and informational) to be overridden from the build based on $SemanticVersion and the optional $Tag build variables. By Default it will look for AssemblyInfo but you can change this to another filename (omitting extension) with $VersionFileName if you have a custom info file. Typically you would leave local builds at version 1.0.0.0 and inject the parameters on a build server.</description>
+    <description>Allows semantic versioning style fields to be injected into your assemblies via a $SemanticVersion property (MSBuild command line parameter or added to your csproj).</description>
+    <summary>Assembly version numbers (including file and informational) will be overridden from the build based on $SemanticVersion and the optional $Tag build variables. By Default it will look for AssemblyInfo but you can change this to another filename (omitting extension) with $VersionFileName if you have a custom info file. Typically you would leave local builds at version 1.0.0.0 and inject the parameters on a build server. By default local builds will output to 0.0.0 usually this is fine), but you can set a version via the same properties as before being added to your command line or csproj file.</summary>
     <language>en-US</language>
     <copyright>Copyright © 2016.</copyright>
     <projectUrl>https://github.com/Lexcess</projectUrl>
