--- a/src/MSBuild.CS.Test/MSBuild.CS.Test.csproj
+++ b/src/MSBuild.CS.Test/MSBuild.CS.Test.csproj
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\MSBuild\build\SemanticVersioning.MSBuild.props" Condition="Exists('..\MSBuild\build\SemanticVersioning.MSBuild.props')" />
+  <PropertyGroup>
+    <SemanticVersion>5.0.0</SemanticVersion>
+    <Tag>RC</Tag>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <Import Project="..\MSBuild\build\SemanticVersioning.MSBuild.props" Condition="Exists('..\MSBuild\build\SemanticVersioning.MSBuild.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -22,7 +26,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>MSBuild.CS.Test.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Debug\SemanticVersioning.MSBuild.CS.Test.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,7 +37,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>MSBuild.CS.Test.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,7 +49,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MSBuild.CS.Test.ruleset" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -59,4 +65,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+ <Target Name="DisplayMessages" AfterTargets="Build" >
+    <Message Importance="High" Text="Extension            = $(DefaultLanguageSourceExtension)" />
+    <Message Importance="High" Text="GenerateAssemblyInfo = $(GenerateAssemblyInfo)" />
+    <Message Importance="High" Text="Tag                  = $(Tag)" />
+    <Message Importance="High" Text="SemanticVersion      = $(SemanticVersion)" />
+  </Target>
 </Project>
