--- a/src/MSBuild.CSCore.Test/MSBuild.CSCore.Test.csproj
+++ b/src/MSBuild.CSCore.Test/MSBuild.CSCore.Test.csproj
@@ -1,17 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;Net461</TargetFrameworks>
+    <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup>
-    <SemanticVersion>5.0.0</SemanticVersion>
-    <Tag>RC</Tag>
-  </PropertyGroup>
-  <Import Project="..\MSBuild\build\SemanticVersioning.MSBuild.props" />
-  <Import Project="..\MSBuild\build\SemanticVersioning.MSBuild.targets" />
-    <Target Name="DisplayMessages" AfterTargets="Build" >
-    <Message Importance="High" Text="Extension            = $(DefaultLanguageSourceExtension)" />
-    <Message Importance="High" Text="GenerateAssemblyInfo = $(GenerateAssemblyInfo)" />
-    <Message Importance="High" Text="Tag                  = $(Tag)" />
-    <Message Importance="High" Text="SemanticVersion      = $(SemanticVersion)" />
-  </Target>
+
 </Project>
